# SecondBrain

./: .gitignore  .stignore  CASCADE.md  How to Build an AI Second Brain with Claude and Obsidian.html  INTEGRATIONS.md  README.md  SETUP.md  daily-tasks.md
.obsidian/: app.json  graph.json  plugins-setup.md
.stfolder/: syncthing-folder-e1e5ed.txt
Daily/: README.md  research-suggestions.md
Templates/: daily-note.md  meeting-note.md  project-note.md  weekly-review.md
junk_drawer/: 02_ChE312_Equilibrium_DistillationBasics.pdf.txt  03_ChE312_Equilibrium_DistillationBasics.pdf.txt  04_ChE312_DistillationEquations.pdf.txt  09_ChE312_MassTransferFundamentals.pdf.txt  1-Final Exam Part B Cartoons F24.pdf.txt  10 1920s with immigration F21 posted.pdf.txt  11_ChE312_Diffusivities_SSMT_ContinuityEqns.pdf.txt  14 Interwar foreign policy F20.pdf.pdf.txt  15 WW2 F20.pdf.txt  17_ChE312_ AbsorptionByContinuousContacting.pdf.txt  18 The Korean War.pdf.txt  19 The Cold war at Home S20 posted.pdf.txt  20-21 GEP list.pdf.txt  2022 HW#10.pdf.txt  2022 HW#11.pdf.txt  2022 HW#12.pdf.txt  2022 HW#3.pdf.txt  2022 HW#4 (1).pdf.txt  2022 HW#5.pdf.txt  2022 HW#6.pdf.txt  2022 HW#7.pdf.txt  2022 HW#8.pdf.txt  2022 HW#9.pdf.txt  2022_07_Bertelli_01.pdf.txt  2023+Benefits+Guide+with+Legal+Notices.pdf.txt  2023. CH223 Syllabus JunOhata.pdf.txt  2023. Spring CH223 POST-exam3 topic list.pdf.txt  2023. Spring CH223 exam3 practice problems updated.pdf.txt  2023. Spring CH223 exam3 practice problems.pdf.txt  2023. Spring CH223 exam3 topic list.pdf.txt  2023. Spring CH223 final practice problems.pdf.txt  2023.Spring CH223 class-1 intro to OrgII.pdf.txt  2023.Spring CH223 class-27 COOH deriv summary  (CH21).pdf.txt  2023.Spring CH223 class-31 MichaelAddition (CH22).pdf.txt  2023.Spring CH223 class-33 amine intro (CH23).pdf.txt  2023.Spring CH223 class-34 red amination (CH23).pdf.txt  2023.Spring CH223 class-35 azo comp (CH23) (1).pdf.txt  2023.Spring CH223 class-36 Pd amination (CH23).pdf.txt  2023.Spring CH223 class-37 LastClass (CH15-23).pdf.txt  2023.Spring CH223 class-7 EAS activating (CH16).pdf.txt  (+538 more)
junk_drawer/github/DeltaDash/backend/: alembic.ini.txt  create_dev_admin.py.txt  create_user.py.txt  debug_excel_lines.py.txt  docker-entrypoint.sh  fix_production_schema.sql  generate_admin_sql.py  init_db.py.txt  pyproject.toml  requirements.txt  setup_dev_admin.py.txt
junk_drawer/github/DeltaDash/backend/app/: main.py
junk_drawer/github/DeltaDash/backend/app/api/v1/: ammunition.py.txt  analytics.py.txt  auth.py.txt  locations.py  materials.py  panels.py  protocols.py  shot_data.py  shot_patterns.py  shots.py.txt  test_sessions.py.txt  vests.py.txt
junk_drawer/github/DeltaDash/backend/app/core/: config.py  logging.py.txt  security.py.txt
junk_drawer/github/DeltaDash/backend/app/db/: session.py.txt
junk_drawer/github/DeltaDash/backend/app/db/models/: __init__.py.txt  ammunition.py  armor_panel.py.txt  armor_panel_layer.py  audit_log.py  location.py  material.py.txt  material_document.py.txt  model_run.py  prediction.py.txt  protocol.py  shot.py  shot_data.py.txt  shot_pattern.py.txt  shot_pattern_position.py  test_session.py.txt  user.py.txt  vest.py.txt  vest_layer.py.txt
junk_drawer/github/DeltaDash/backend/app/schemas/: ammunition.py.txt  analytics.py.txt  armor_panel.py  audit_log.py  location.py.txt  material.py  material_document.py.txt  model_run.py  prediction.py.txt  protocol.py.txt  shot.py  shot_data.py  shot_pattern.py.txt  test_session.py  user.py.txt  vest.py.txt
junk_drawer/github/DeltaDash/backend/app/services/: excel_parser.py.txt  test_session_service.py
junk_drawer/github/DeltaDash/backend/app/utils/: equations.py.txt
junk_drawer/github/DeltaDash/backend/migrations/: env.py.txt
junk_drawer/github/DeltaDash/backend/migrations/versions/: 20260517_0924_314b789d9830_initial_migration.py.txt  20260518_1056_74e9e5525bd1_update_table_schemas_to_match_current_.py
junk_drawer/github/DeltaDash/backend/scripts/: fix_db_and_seed.py  init_permissions.py.txt  seed_ammunition.py  seed_users.py
junk_drawer/github/EvolutionSimSite/: 404.html.txt  CMakeLists.txt  README.md.txt  package.json
junk_drawer/github/EvolutionSimSite/platform/desktop/: main.cpp.txt
junk_drawer/github/EvolutionSimSite/platform/web/: wasm_app.cpp
junk_drawer/github/EvolutionSimSite/scripts/: code_analyzer.py  requirements.txt  run-build-wasm.js.txt  run-setup-wasm.js  transform-wasm-js.js
junk_drawer/github/EvolutionSimSite/src/: index.html
junk_drawer/github/EvolutionSimSite/src/assets/wasm/: index.js
junk_drawer/github/EvolutionSimSite/src/css/: game.css.txt  loading.css.txt  main.css.txt
junk_drawer/github/EvolutionSimSite/src/engine/: Logging.cpp.txt  TemperatureSystem.cpp  wasm_bindings.cpp
junk_drawer/github/EvolutionSimSite/src/engine/core/: Application.cpp.txt
junk_drawer/github/EvolutionSimSite/src/engine/serialization/: SaveSystem.cpp.txt  Serialization.cpp
junk_drawer/github/EvolutionSimSite/src/js/: main.js
junk_drawer/github/EvolutionSimSite/src/js/core/: App.js  Config.js.txt  Engine.js.txt  EventBus.js
junk_drawer/github/EvolutionSimSite/src/js/managers/: AdminManager.js  MapManager.js.txt  SaveManager.js.txt  SelectionManager.js  TemperatureManager.js  TileManager.js.txt  UIManager.js.txt
junk_drawer/github/EvolutionSimSite/src/js/utils/: WasmManager.js.txt  logger.js.txt
junk_drawer/github/EvolutionSimSite/src/jsLegacy/: main.js
junk_drawer/github/EvolutionSimSite/src/jsLegacy/managers/: CanvasManager.js  EngineManager.js  SaveManager.js  SelectionManager.js  TemperatureManager.js  UIManager.js
junk_drawer/github/EvolutionSimSite/src/public/: diagnostics.html  index.html  wasm_shell.html.txt
junk_drawer/github/EvolutionSimSite/src/public/build_wasm/: CMakeCache.txt  compile_commands.json  index.js
junk_drawer/github/EvolutionSimSite/src/public/wasm/: index.html  index.js
junk_drawer/github/EvolutionSimSite/src/scripts/: build_wasm.cmd  build_wasm.sh.txt  setup_wasm.cmd.txt  setup_wasm.sh.txt
junk_drawer/github/EvolutionSimSite/src/wasm/: initWasm.js
(+2021 files in other folders)
